re-factoring file hierarchy

--- a/playgnd/mongodb_playgnd.ipynb
+++ b/playgnd/mongodb_playgnd.ipynb
@@ -9,18 +9,22 @@
    "outputs": [],
    "source": [
     "# Get MongoDB to work in Python\n",
-    "# Tutorial Link: http://api.mongodb.com/python/3.6.0/tutorial.html\n",
-    "from pymongo import MongoClient"
+    "# Tutorial Link (pymongo): http://api.mongodb.com/python/3.6.0/tutorial.html\n",
+    "# Tutorial Link (mongoengine): http://docs.mongoengine.org/tutorial.html\n",
+    "# Mongoengine uses pymongo AND provides object mapping (from JSON to python objects)\n",
+    "import mongoengine\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from pymongo import MongoClient\n",
     "# import datetime as dt\n",
     "client = MongoClient(\"mongodb://localhost:27017/\") # Default IP address\n",
     "db = client.test_database\n",
@@ -29,31 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "test_list = [{\"user\": \"Eric\", \"body\": \"Ni hao 你好\"},\n",
-    "            {\"user\": \"Billy\", \"body\": \"为蛇么\", \"newParam\": 1}]"
+    "# mongoengine add\n",
+    "mongoengine.register_connection(alias='core', name='zwDB')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Bulk insert\n",
-    "# docs = collection.insert_many(test_list) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +58,8 @@
       "{'_id': ObjectId('5caa786b8f01c968b7c8f290'), 'user': 'Eric', 'body': 'Ni hao 你好'}\n",
       "{'_id': ObjectId('5caa786b8f01c968b7c8f291'), 'user': 'Bully', 'body': '为蛇么', 'newParam': 1}\n",
       "{'_id': ObjectId('5cb3a5868f01c90afd0b9a68'), 'user': 'Eric', 'body': 'Ni hao 你好'}\n",
-      "{'_id': ObjectId('5cb3a5868f01c90afd0b9a69'), 'user': 'Billy', 'body': '为蛇么', 'newParam': 1}\n"
+      "{'_id': ObjectId('5cb3a5868f01c90afd0b9a69'), 'user': 'Billy', 'body': '为蛇么', 'newParam': 1}\n",
+      "{'_id': ObjectId('5cb3a7608f01c90be735a78b'), 'user': 'Tester', 'body': '这个 i 报告'}\n"
      ]
     }
    ],
@@ -102,12 +93,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tester\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc['user'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mongoengine implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary())"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client = mongoengine.connect('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'test_database_mongoEngine')\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = client.test_database_mongoEngine\n",
+    "print(db)\n",
+    "collection=db.new_test_collection\n",
+    "test = {\"user\": \"Tester\", \"body\":\"这个 i 报告\"}\n",
+    "test_id = collection.insert_one(test).inserted_id"
+   ]
   }
  ],
  "metadata": {
@@ -130,5 +183,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
