--- a/playgnd/mongodb_playgnd.ipynb
+++ b/playgnd/mongodb_playgnd.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mongoengine add\n",
@@ -121,36 +123,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary())"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from mongoengine import Document,StringField\n",
     "client = mongoengine.connect('test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CEDICT(Document):\n",
+    "    \"\"\"CC-CEDICT mapping in database. This gets loaded when the application starts\"\"\"\n",
+    "    traditional = StringField(required=True)\n",
+    "    simplified = StringField(required=True)\n",
+    "    pinyin = StringField(required=True)\n",
+    "    definition = StringField(required=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'test_database_mongoEngine')\n"
+      "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary()), 'test_database_mongoEngine')\n"
      ]
     }
    ],
@@ -161,6 +168,136 @@
     "test = {\"user\": \"Tester\", \"body\":\"这个 i 报告\"}\n",
     "test_id = collection.insert_one(test).inserted_id"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pymongo.cursor.Cursor object at 0x103b65b00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_query = collection.find({\"user\":\"Tester\"})[0] # Find query is indexed. Returns list of all matches\n",
+    "print(find_query) # Len of collection object = number of key-value pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<CEDICT: CEDICT object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cedict = CEDICT('a','b','pinyin','def')\n",
+    "test_cedict.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Equivalent of \"Collection\"\n",
+    "engine_collection = CEDICT.objects()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<CEDICT: CEDICT object>, <CEDICT: CEDICT object>]\n",
+      "5\n",
+      "[{\"_id\": {\"$oid\": \"5cc668688f01c936cc7850ff\"}, \"traditional\": \"a\", \"simplified\": \"b\", \"pinyin\": \"pinyin\", \"definition\": \"def\"}, {\"_id\": {\"$oid\": \"5cc6687a8f01c936cc785100\"}, \"traditional\": \"a\", \"simplified\": \"b\", \"pinyin\": \"pinyin\", \"definition\": \"def\"}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query in mongodb\n",
+    "print(CEDICT.objects())\n",
+    "print(len(CEDICT.objects(traditional=\"a\").as_pymongo()[0]))\n",
+    "print(CEDICT.objects(traditional=\"a\").to_json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CEDICT.objects(pinyin=\"pinyin\").update(pinyin=\"AAAAAAAAA\") # update changes ALL matching objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tester = CEDICT.objects().first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tester.pinyin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
